# Loki

./: CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: inference.rs  lib.rs  llama_server.rs  model_download.rs
src/components/: ChatArea.tsx  InputBar.tsx  SettingsModal.tsx  TerminalHeader.tsx
src/hooks/: useModels.ts
src/styles/: theme.css
webui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
webui/src/: app.css
webui/src/lib/: tauri-bridge.ts
webui/src/lib/components/app/: TauriModelSelector.svelte
webui/src/lib/components/app/chat/: index.ts
webui/src/lib/components/app/chat/ChatForm/: ChatFormDocumentModeChip.svelte
webui/src/lib/components/app/chat/ChatMessages/: ChatMessageActions.svelte  ChatMessageAssistant.svelte
webui/src/lib/components/app/server/: ServerErrorSplash.svelte  ServerLoadingSplash.svelte
webui/src/lib/constants/: settings-config.ts  settings-fields.ts  settings-keys.ts  settings-sections.ts
webui/src/lib/enums/: settings.ts
webui/src/lib/hooks/: use-processing-state.svelte.ts
webui/src/lib/services/: chat.service.ts
webui/src/lib/stores/: chat.svelte.ts  conversations.svelte.ts  server.svelte.ts  settings.svelte.ts
webui/src/lib/types/: api.d.ts  settings.d.ts
webui/src/lib/utils/: index.ts  text-scoring.ts
webui/src/routes/: +layout.svelte  +page.svelte
webui/src/routes/chat/[id]/: +page.svelte  +page.ts
(+10 files in other folders)
