[package]
name = "loki"
version = "0.1.48"
description = "Loki – Lokal AI-chat"
authors = ["mrswedish"]
edition = "2021"

[lib]
name = "loki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
futures-util = "0.3"
zip = "2"
sysinfo = "0.33"
tar = "0.4"
flate2 = "1.0"
